# webcl-translator-wg

./: .clang-format  .cmake-format.json  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: build.yaml
cmake/: EmscriptenVersion.cmake  GoogleBenchmark.cmake  GoogleTest.cmake  JsonParser.cmake  WebCLTranslatorEnvironment.cmake  WebCLTranslatorFunctions.cmake  WebCLTranslatorVersion.cmake
docs/: index.html  run.html
docs/css/: print.css  stylesheet.css  toggle-switch.css
docs/js/: settings.js  webcl.js  webcl.min.js
sources/: CMakeLists.txt
sources/convolution/: convolution.benchmark.cpp  convolution.cpp  convolution.h  convolution.json  convolution.test.cpp
sources/hello/: CMakeLists.txt  hello.benchmark.cpp  hello.cpp  hello.h  hello.json  hello.test.cpp  main.cpp
sources/matrixmul/: matrixmul.benchmark.cpp  matrixmul.cpp  matrixmul.h  matrixmul.test.cpp  mm1.cl  mm1.cl.resources  mm2.cl  mm2.cl.resources
webcl/: package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.debug.config.js  webpack.dev.config.js  webpack.dist.config.js
webcl/eslint/: package.json  sorted-imports.js
webcl/src/: index.ts  webcl.d.ts  webcl.ts  webclbuffer.ts  webclcommandqueue.ts  webclconstants.ts  webclcontext.ts  webcldevice.ts  webclevent.ts  webclexception.ts  webclimage.ts  webclimagedescriptor.ts  webclkernel.ts  webclkernelarginfo.ts  webclmemoryobject.ts  webclplatform.ts  webclprogram.ts  webclsampler.ts  webcltype.ts  webcluserevent.ts
